--- a/src/components/ContactForm/ContactForm.scss
+++ b/src/components/ContactForm/ContactForm.scss
@@ -1,6 +1,7 @@
 @import "styles/shared.scss";
 
 .Form {
+  max-width: 500px;
   padding: 20px;
   border: 1px solid $dark-gray;
   border-radius: 5px;
