--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -2,7 +2,7 @@
 
 body {
   margin: 0;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-family: "Roboto", sans-serif;
   color: $dark-gray;
 }
 
@@ -14,4 +14,8 @@ h2 {
 
 p {
   margin: 0;
+}
+
+.title {
+  font-size: 24px;
 }
